[workspace]
members = [
    "packages/*",
    "contracts/core/factory",
    "contracts/core/pool",
    "contracts/core/token",
    "contracts/core/adapters/anchor",
    "contracts/gateway/factory",
    "contracts/gateway/gov",
    "contracts/gateway/pool",
    "contracts/gateway/swap",
    "contracts/pylon/airdrop",
    "contracts/pylon/collector",
    "contracts/pylon/community",
    "contracts/pylon/gov",
    "contracts/pylon/staking",
    "contracts/pylon/vesting",
]

[profile.release]
rpath = false
lto = true
overflow-checks = true

