[workspace]
members = [
    "packages/*",
    "contracts/core/factory",
    "contracts/core/pool",
    "contracts/core/pool-v2",
    "contracts/core/adapters/anchor",
    "contracts/gateway/factory",
    "contracts/gateway/pool",
#    "contracts/gateway/swap",
#    "contracts/gateway/swap-refund",
    "contracts/pylon/airdrop",
    "contracts/pylon/collector",
    "contracts/pylon/community",
    "contracts/pylon/gov",
    "contracts/pylon/staking",
    "contracts/pylon/vesting",
]

[profile.release]
rpath = false
lto = true
overflow-checks = true
