[package]
name = "pylon-vesting"
version = "1.0.0"
authors = ["carter <carter@pylon.money>", "Terraform Labs, PTE."]
edition = "2018"
license = "Apache-2.0"
description = "A Vesting contract for Pylon Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
pylon-token = { version = "0.2.0", path = "../../../packages/pylon_token" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0", default-features = false }
